[tool.poetry]
name = "csv-generation"
version = "0.1.0"
description = "csv_generation script"
authors = ["Кирюшин Виталий <kiryuschin.vitalij@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
